# MP-BeltMatic

./: .gitignore  CMakeLists.txt
client/src/: main.cpp
server/src/: main.cpp
